--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+a {
+  text-decoration: none;
+  color: inherit !important;
+  cursor: pointer;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
