feat: 导航栏 轮播图 页脚

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -8,6 +8,14 @@ a {
   cursor: pointer;
 }
 
+h1 {
+  font-size: 36px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
